# factor-audit

./: README.md
factor-audit 2/: PREREGISTRATION.md  README.md  pyproject.toml  requirements.txt
factor-audit 2/src/factor_audit/analysis/: decay.py
factor-audit 2/src/factor_audit/data/: fetch_french.py
factor-audit 2/src/factor_audit/factors/: costs.py
factor-audit 2/src/factor_audit/stats/: tests.py
factor-audit 2/tests/: test_costs.py  test_decay.py  test_stats.py
