[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-audit"
version = "0.1.0"
description = "Does the market still pay for the factors academic finance says it should?"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
